v2.2-dev (xx/xx/2016)
---------------------

WCS
~~~

- Fix bugs with the handling of ``CROTa``. [!77]

Image
~~~~~

- Fix bug in ``Image.rebin`` when the ``factor`` parameter is a tuple. [#483]

Cube
~~~~

- Fix issue with ``subcube_circle_aperture`` which was masking the original
  cube.


Sources
~~~~~~~

- Correct behaviour when adding an image not overlapping with Source. [#482]

Pixtable
~~~~~~~~

- A new method `~mpdaf.drs.PixTable.selfcalibrate` was added to correct the
  background levels of the slices. This method replaces the
  ``subtract_slice_median`` and ``divide_slice_median`` methods (which have
  been removed). The new method works differently, gives better results, and no
  more requires to pre-compute a mean sky spectrum with
  `~mpdaf.drs.PixTable.sky_ref`. [!78]

v2.1 (16/11/2016)
-----------------

New Features
~~~~~~~~~~~~

* Allow to pass optional arguments when opening a FITS file, using the
  ``fits_kwargs`` parameter.

* Allow to write ``CHECKSUM``/``DATASUM`` when saving a FITS file (use
  ``checksum=True``). [!53]

* ``Image`` and ``Spectrum`` objects keep now by default the type of the FITS
  data (like ``Cube``). [!50]

* Add ``dtype`` property to Data classes (Spectrum/Image/Cube).

* Add ``WCS`` naxis1/naxis2 properties which uses naxis from the underlying wcs
  object.

* Determine the reference frame from the primary header if possible and don't
  force it if not found in the primary header.  HST and MUSE files usually have
  the EQUINOX/RADESYS/RADECSYS keywords only in the primary header, which cause
  MPDAF to use ICRS instead of FK5. [!47] Add reference frame in ``WCS.info``.

* Enhance ``fftconvolve`` and add this method for ``Cube``. [!52]

* New method `MUSE.get_FSF_from_cube_keywords
  <mpdaf.MUSE.get_FSF_from_cube_keywords>` which creates a cube of FSFs
  corresponding to the keywords presents in the MUSE data cube primary header.

* Add small utility function to create field maps.
